Fixed homeworkItem alignment

--- a/sass/cardContainers.scss
+++ b/sass/cardContainers.scss
@@ -56,7 +56,6 @@
     background: rgb(233, 233, 233);
     color: black;
     border-radius: 50%;
-    margin-bottom: -20px;
 }
 
 // Test item container
